# vacancies_parser

./: README.md  classes.py  data.txt  main.py  pyproject.toml  utils.py
data/: 1000_data.json  all_data.json  data_hh.json  data_sj.json  raw_data.json  salary_top_10  salary_top_10.json  salary_top_15  salary_top_2.json  salary_top_25.json  salary_top_6.json  selected_description_аналитик.json  sorted_data.json
vacancies_project/: classes.py  main.py  settings.py  utils.py
