[tool.poetry]
name = "vacancies"
version = "0.1.0"
description = ""
authors = ["anna-golovacheva <anna.ch.ollala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.1"
fake-useragent = "^1.1.1"
pandas = "^1.5.2"
requests = "^2.31.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
